changes in responsive 19-12-22
for mattress jane title all space cleared

--- a/src/components/MattressJane/Frequentlybought/frequentlybought.css
+++ b/src/components/MattressJane/Frequentlybought/frequentlybought.css
@@ -124,5 +124,6 @@ border: none;
 @media screen and (max-width:600px) {
         .freequentboughttogether{
             margin-top: 37px;
+            width: 100%;
         }
 }
