--- a/src/components/MattressJane/specification/specific.css
+++ b/src/components/MattressJane/specification/specific.css
@@ -39,7 +39,7 @@
 }
 
 .blurtitle{
-    width: 732px;
+    width: 100%;
 height: 500px;
 border-radius: 12px;
 /* Note: backdrop-filter has minimal browser support */
@@ -47,9 +47,15 @@ border-radius: 12px;
 }
 @media screen and (max-width:600px) {
     .blurtitle{
-        width: 453px;
+        width: 100%;
+        margin-top: 21px;
     }
-    
+    .specmain{
+        width: 100%;
+    }
+    .exjane{
+        width: 100%;
+    }
 }
 .describtion{
     background: #FFF0D2;
@@ -99,7 +105,7 @@ display: flex;
     line-height: 36px;
 }
 .specmain{
-    width: 440px;
+    width: 100%;
     height: 440px;
     background: #F8F9FA;
     border: 1px solid #D2D2D2;
@@ -132,7 +138,7 @@ color: #3F3F3F;
 }
 .describ{
     padding: 10px 19px;
-    width: 460px;
+    width: 100%;
     height: 141px;
     left: 48px;
     /* top: 1329px; */
@@ -177,5 +183,5 @@ color: #2F2F2F;
 }
 .parent-describ{
     padding: 0px 10px;
-   margin-top: -22px;
+   margin-top: 7px;
 }   
