--- a/src/components/Index/Ourproducts/Ourproduct.css
+++ b/src/components/Index/Ourproducts/Ourproduct.css
@@ -15,9 +15,15 @@ body{
 .ourproducts{
   
     width: 100%;
-    padding: 20px 40px;
-   
+    padding: 10px 10px;
+}
 
+@media screen and (max-width:600px) {
+    .ourproducts{
+        width: 100%;
+        padding: 6px !important;
+    }
+    
 }
 .prod{
     background: rgba(255, 255, 255, 0.24);
@@ -56,6 +62,13 @@ margin-top: 17px;
     max-width: 100%;
 
 }
+@media screen and (max-width:600px) {
+.div{
+ width: 100%;
+}
+    
+}
+
 .heading{
     display: flex;
     justify-content: space-between;
