--- a/src/components/contactus/Contactus.css
+++ b/src/components/contactus/Contactus.css
@@ -37,6 +37,18 @@
 
 }
 .mapiframe{
-  max-width: 300px;
-height: 300px;
+width: 100%;
+height: 380px;
+}
+@media screen and (max-width:600px) {
+    .mapiframe{
+        align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    }
+    
+}
+.locationbtn{
+    margin-left: 100px;
 }
