--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -1,198 +1,256 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
-body{
-    margin:0px;
-    padding: 0px;
-    font-family:'Nunito';
-    /* background-color: #ffffff; */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Nunito";
+  /* background-color: #ffffff; */
 }
-*{
-    font-family: 'Nunito';
+* {
+  font-family: "Nunito";
 }
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-.right-menu{
-    margin-right:auto ;
+.right-menu {
+  margin-right: auto;
 }
 @media only screen and (max-width: 800px) {
-    .navbar-collapse {
-      background:#ffffff;
-    }
-    
+  .navbar-collapse {
+    background: #ffffff;
   }
-  @media screen and (max-width:600px) {
-    .right-menu{
-        margin-left: 241px;
-        margin-top: -79px;
-    }
-    .log{
-        margin-right: 123px;
-    }
+}
+@media screen and (max-width: 600px) {
+  .right-menu {
+    margin-left: 241px;
+    /* margin-top: -74px !important; */
   }
-  @media screen and (max-width:400px) {
-    .right-menu{
-        margin-left: 212px;
-    margin-top: -90px;
+  .log {
+    margin-right: 123px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .right-menu {
+    margin-left: 220px;
+    /* margin-top: -90px; */
     margin-right: -7px;
-    }  
   }
-  @media screen and (max-width:365px) {
-    .right-menu{
-        margin-left: 184px;
+}
+@media screen and (max-width: 365px) {
+  .right-menu {
+    margin-left: 184px;
     margin-top: -100px;
-   
-}
-    }
-
-nav{
-    width:100%;
-    box-shadow: 2px 2px 30px rgba(0,0,0,0.05);
-    z-index: 100;
+  }
 }
 
-.navigation{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 45px;
+nav {
+  width: 100%;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05);
+  z-index: 100;
 }
-.logo img{
-    height: 30px;
-}
-.menu{
-    display: flex;
 
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 45px;
 }
-.menu li{
-    position: relative;
-    margin: 20px;
-    display: flex;
-    text-transform: uppercase;
-    font-weight: 500;
-    display: flex;
+.logo img {
+  height: 30px;
 }
-.menu li a{
-    color: #555555;
+.menu {
+  display: flex;
 }
-.right-menu a{
-    margin: 0px 10px;
-    font-size: 1.2rem;
-    color: rgba(0,0,0,0.7);
+.menu li {
+  position: relative;
+  margin: 20px;
+  display: flex;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: flex;
+}
+.menu li a {
+  color: #555555;
+}
+.right-menu a {
+  margin: 0px 5px;
+  font-size: 1.2rem;
+  color: rgba(0, 0, 0, 0.7);
 }
 .menu a:hover,
 .right-menu a:hover,
 .search-cancel:hover,
-.form-cancel:hover{
-    color: #0b9d8a;
-    transition: all ease 0.3s;
+.form-cancel:hover {
+  color: #0b9d8a;
+  transition: all ease 0.3s;
 }
 
+.fa-shopping-cart {
+  position: relative;
+}
+.num-cart-product {
+  position: absolute;
+  top: -17px;
+  right: -17px;
+  width: 25px;
+  height: 25px;
+  font-size: 0.8rem;
+  border-radius: 50%;
+  background-color: #0b9d8a;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+}
 
-.fa-shopping-cart{
-    position: relative;
+.search-input {
+  width: 100%;
+  border-bottom: 2px solid #555555;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  margin-top: 20px;
 }
-.num-cart-product{
-    position: absolute;
-    top: -17px;
-    right: -17px;
-    width:25px;
-    height: 25px;
-    font-size: 0.8rem;
-    border-radius: 50%;
-    background-color: #0b9d8a;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 400;
+.search-bar input {
+  width: 100%;
+  padding: 30px;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  margin: 20px;
+  padding: 0px 20px;
 }
+.search-cancel {
+  color: #272727;
+  font-size: 2rem;
+  padding-right: 40px;
+}
+.search-bar {
+  display: none;
+}
+.search-bar-active {
+  display: flex;
+}
+@keyframes search {
+  0% {
+    bottom: -300px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+#navbarNavAltMarkup {
+  font-size: larger;
 
-.search-input{
-    width:90%;
-    border-bottom: 2px solid #555555;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    margin-top: 20px;
+  align-items: center;
+  margin-right: auto;
+  place-content: space-evenly;
 }
-.search-bar input{
-    width:100%;
-    padding: 30px;
-    border: none;
-    outline: none;
-    font-size: 2rem;
-    margin: 20px;
-    padding: 0px 20px;
+.nav-item {
+  justify-content: center;
+  font-size: larger;
+  color: #272727;
+  white-space: pre-wrap;
 }
-.search-cancel{
-    color: #272727;
-    font-size: 2rem;
-    padding-right: 40px;
+.navbar-nav {
+  display: block;
+  display: flex;
+  margin-right: 100px;
+  padding: 40px;
 }
-.search-bar{
-    display: none;
+.nav-link {
+  display: inline-block;
+  margin-right: 30px;
 }
-.search-bar-active{
-    display: flex;
+.viewoff {
+  display: none;
 }
-@keyframes search{
-    0%{
-        bottom: -300px;
-    }
-    100%{
-        bottom: 0px;
-    }
-}
-#navbarNavAltMarkup{
-    font-size: larger;
-
-    align-items: center;
-    margin-right: auto;
-    place-content: space-evenly;
-}
-.nav-item{
-    justify-content: center;
-    font-size: larger;
-    color: #272727;
-    white-space: pre-wrap;
-}
-.navbar-nav{
-    display: block;
-    display: flex;
-    margin-right: 100px;
-    padding: 40px;
-
-}
-.nav-link{
-    display: inline-block;
-    margin-right: 30px;
-}
-.viewoff{
-    display: none;
-}
-.nav-container{
-    border-width:0;
-    box-shadow:none;
-    background-color: aliceblue;
+.nav-container {
+  border-width: 0;
+  box-shadow: none;
+  background-color: aliceblue;
 }
 .navbar-light .navbar-nav .nav-link {
-    color: #272727;
+  color: #272727;
 }
-@media screen and (max-width:600px) {
-    #hoverca{
-        display: none;
-    }
-    
+@media screen and (max-width: 600px) {
+  #hoverca {
+    display: none;
+  }
+  .searchBox {
+    display: none !important;
+  }
+  .mbl-searchbar {
+    display: block !important;
+  }
 }
-@media screen and (max-width:600px) {
-    .allow{
-margin-top: -61px;
-    }
+@media screen and (max-width: 600px) {
+  .allow {
+    margin-top: -61px;
+  }
+  .right-menu {
+    margin-top: -55px;
+  }
+  .mbl-searchbar{
+    margin-top: 15px;
+  }
+}
+
+.searchBox {
+  position: absolute;
+  top: 50%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchBox input {
+  background-color: rgb(233, 236, 238);
+  border: none;
+  outline: none;
+  width: 0px;
+  height: 25px;
+  padding: 0;
+  opacity: 0;
+  border-radius: 25px;
+  line-height: 40px;
+  font-size: 12px;
+  color: rgb(176, 172, 172);
+  transition: all 1s;
+}
+
+.searchBox input::placeholder {
+  color: rgba(114, 103, 103, 0.5);
+  font-weight: 400;
+}
+
+.searchBox i {
+  padding: 9px 10px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: all 0.1s;
+}
+
+.searchBox:hover input {
+  width: 160px;
+  opacity: 1;
+  padding: 10px 20px;
+}
+
+.searchBox:hover i {
+  color: rgb(209, 198, 198);
+}
+.mbl-searchbar {
+  display: none;
 }
