--- a/src/components/Aboutus/About.css
+++ b/src/components/Aboutus/About.css
@@ -21,3 +21,12 @@ margin: 2%;
 padding: 10px 10px;
 
 }
+@media screen and(max-width:600px) {
+    
+    .maincontent{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 32px;
+    }
+    
+}
