--- a/src/components/Aboutus/Girlwithmatt/girlmattress.css
+++ b/src/components/Aboutus/Girlwithmatt/girlmattress.css
@@ -18,9 +18,23 @@ backdrop-filter: blur(25px);
     
 }
 .toneitabacktitle{
-    background-image: url('https://images.pexels.com/photos/4825701/pexels-photo-4825701.jpeg?auto=compress&cs=tinysrgb&w=600');
+    background-image: url('https://images.pexels.com/photos/4825701/pexels-photo-4825701.jpeg?auto=compress&cs=tinysrgb&w=600 ');
     width: 100%;
     display: flex;
     justify-content: flex-end;
     height: 347px;
+}
+@media screen and (max-width:600px) {
+    .contenttoneita{
+        width: 234px;
+    }
+    .contenttoneita2{
+        width: 192px;
+    }
+    .maincontent{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 32px;
+    }
+    
 }
