--- a/src/components/Checkout/Components/Deliveryaddress.css
+++ b/src/components/Checkout/Components/Deliveryaddress.css
@@ -4,14 +4,26 @@ border-radius: 7px;
 width: 462px;
 height: 222px;
 box-sizing: border-box;
-
-/* Auto layout */
-
 display: flex;
 flex-direction: column;
 align-items: flex-start;
 padding: 24px 112px 24px 14px;
 gap: 10px;
+}
+@media screen and (max-width:600px) {
+    .addresstot{
+        border: 1px solid #C5C5C5;
+        border-radius: 7px;
+        width: 100%;
+        height: 222px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 24px 112px 24px 14px;
+        gap: 10px;
+        margin-left: 10px;
+    }
 }
 .commdelivery{
     width: 462px;
