--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -16,6 +16,7 @@ ul {
 }
 a {
   text-decoration: none;
+  color: white;
 }
 .right-menu {
   margin-right: auto;
@@ -209,7 +210,7 @@ nav {
 .searchBox {
   position: absolute;
   top: 53%;
-  left: 88%;
+  left: 93%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
@@ -273,6 +274,21 @@ a{
   font-weight: 800px;
  
 
+}
+.nav-item{
+  transition: all .5s ease-out ; 
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+}
+.nav-item:hover{
+  transform: translate(0, -10px);
+  font-size: 1em;
+  border-radius: 30px;
+  width: fit-content;
+  color: white;
+  padding: 10px 1px;
+  height: auto;
 }
 .dropdown-item:hover{
   transform: translate(0, -8px);
