--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,6 +72,12 @@ color: #FFFFFF;
 .hover-footer.text-reset:hover{
     color: #FFFFFF;
     transform: translate(0, -8px);
-    font-size: 1em;
-   
+    font-size: 1em; 
+}
+.change-color{
+    font-size: 14px;
+line-height: 52px;
+letter-spacing: -0.01em;
+color: #C7C7C7;
+
 }
