--- a/src/components/Wishlistpage/Wishlist.css
+++ b/src/components/Wishlistpage/Wishlist.css
@@ -24,6 +24,7 @@ height: 277px;
     font-weight: 600;
 font-size: 20px;
 line-height: 24px;
+margin-left: 10px;
 /* identical to box height, or 80% */
 color: #000000;
 }
