--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,8 +17,6 @@ body{
     font-weight: 500;
 font-size: 14px;
 line-height: 14px;
-/* or 100% */
-
 text-align: center;
 letter-spacing: 0.02em;
 
@@ -39,7 +37,7 @@ letter-spacing: -0.01em;
 color: #AEAEAE;
 }
 .salesoch{
-    font-weight: 600;
+    font-weight: 400;
 font-size: 16px;
 line-height: 31px;
 color: #FFFFFF;
@@ -60,6 +58,7 @@ color: #FFFFFF;
     font-size: large;
     font-weight: 600;
     transition: all .3s ease-out ;
+    padding: 0;
 }
 
 .hover-footer{
@@ -70,14 +69,16 @@ color: #FFFFFF;
 }
 
 .hover-footer.text-reset:hover{
-    color: #FFFFFF;
-    transform: translate(0, -8px);
-    font-size: 1em; 
+    color: #FFFFFF !important;
+    transform: translate(x)5px;
+    /* font-size: 1em; */
 }
+    
 .change-color{
     font-size: 14px;
 line-height: 52px;
 letter-spacing: -0.01em;
 color: #C7C7C7;
+white-space: nowrap;
 
 }
