contact footer slider rating changed

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -70,7 +70,7 @@ color: #FFFFFF;
 
 .hover-footer.text-reset:hover{
     color: #FFFFFF !important;
-    transform: translate(x)5px;
+    transform:translateX(10px);
     /* font-size: 1em; */
 }
     
