--- a/src/components/Aboutus/AboutSlider/Aboutslider.css
+++ b/src/components/Aboutus/AboutSlider/Aboutslider.css
@@ -15,6 +15,11 @@ height: auto;
 padding: 10px 10px;
 margin: 2%;
 }
+@media screen and (max-width:600px) {
+    .contentaboutslide{
+        width: 100%;
+    }
+}
 .txtabout2{
     font-weight: 700;
     font-size: 20px;
