--- a/src/components/Checkout/Components/Cart.css
+++ b/src/components/Checkout/Components/Cart.css
@@ -21,6 +21,13 @@
    border: 1px solid rgba(0, 0, 0, 0.25);
    padding: 10px 10px;
 }
+#flexCheckDefault{
+    margin-right: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -2px;
+}
 
 @media only screen and (max-width: 600px) {
     .checkmain {
