--- a/src/components/Checkout/Components/Deliveryaddress.css
+++ b/src/components/Checkout/Components/Deliveryaddress.css
@@ -35,7 +35,9 @@ gap: 10px;
     align-content: flex-start;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 24px;
 }
+
 .deltxt{
     font-weight: 600;
 font-size: 14px;
@@ -59,6 +61,11 @@ font-weight: 800;
 .addhomcheck{
     display: flex;
     gap: 8px;
+    align-items: center;
+    justify-content: center;
+}
+#deliverycheck{
+    margin-top: -5px;
 }
 .name{
     font-weight: 700;
@@ -77,7 +84,7 @@ color:  #FF8E15;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 .continuebtn{
     background: #FF8E15;
@@ -86,4 +93,9 @@ width: 313px;
 height: 36px;
 color: white;
 border: none;
+font-weight: 700;
+font-size: 14px;
+line-height: 24px;
+color: #FFFFFF;
+margin-top: 13px;
 }
