--- a/src/components/MattressJane/MainTestimonial/rating.css
+++ b/src/components/MattressJane/MainTestimonial/rating.css
@@ -45,6 +45,8 @@
     flex-grow: 0;
     width: 137px;
     height: 22px;
+    border: none;
+    margin-left: 0%;
     }
   }
   @media screen and (min-width:600px) {
@@ -54,7 +56,22 @@
     
   }
   
+.ratedrop{
+    background: #FCFCFC;
+border: 1px solid #DFDFDF;
+border-radius: 4px;
+width: 165px;
+height: 40px;
+padding: 4px 10px;
+font-weight: 500;
+font-size: 16px;
+line-height: 31px;
+/* identical to box height, or 194% */
 
+letter-spacing: -0.01em;
+
+color: #000000;
+}
 
 .headerdiv{
     display: flex;
@@ -89,6 +106,9 @@ flex-grow: 0;
 width: 237px;
 height: 44px;
 margin-top: 28px;
+margin-top: 16px;
+    margin-left: 127%;
+    border: none;
 }
 .percent,.percent2,.percent3,.percent4{
     background: #FF8E15;
