--- a/src/components/Profilepage/components/Requestquote.css
+++ b/src/components/Profilepage/components/Requestquote.css
@@ -77,7 +77,7 @@ color: #3C4043;
     border-radius: 8px;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     padding: 10px 40px;
     gap: 10px;
     width: 124px;
