--- a/src/components/MattressJane/MattressjaneCard/jane.css
+++ b/src/components/MattressJane/MattressjaneCard/jane.css
@@ -140,16 +140,17 @@ color: #000000;
     align-content: center;
     gap: 18px;
     padding: 10px;
+    align-items: baseline;
 }
 .iconjan{
-    gap: 5px;
+    gap: 3px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
     background: orange;
-    
+    padding: 1px 5px;
     
 }
 .pricelist{
