--- a/src/components/MattressJane/RecentlyViewed/Recently.css
+++ b/src/components/MattressJane/RecentlyViewed/Recently.css
@@ -3,7 +3,7 @@
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
 border-radius: 12px;
 box-sizing: border-box;
-width: 100%;
+width: auto;
 height: auto;
-margin: 2%;
+margin: 1%;
 }
